--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.6",
     "redux-persist": "^6.0.0",
+    "sass": "^1.58.3",
+    "spin-delay": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
